# TG-Ai-Event-Concierge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  event_ingest.csv  pyproject.toml
app/: config.py  dependencies.py  main.py
app/conversation/: handlers.py  prompts.py  state_machine.py
app/db/: models.py  queries.py
app/events/: filters.py  importer.py  search.py
app/llm/: client.py  copywriting.py  intent.py  ranking.py
app/pdf/: generator.py
app/pdf/templates/: recommendations.html
app/stt/: transcribe.py
app/telegram/: client.py  handlers.py  schemas.py
app/utils/: dedup.py  logging.py
scripts/: deploy.sh  import_events.py
